# ecg-arrhythmia-detection

./: .replit  README.md  main.py  pyproject.toml
data/processed/: features.csv  heartbeats.npy  labels.pkl
models/deep_learning/: cnn_model.pth  lstm_model.pth
models/traditional/: label_encoder.pkl  random_forest_model.pkl  scaler.pkl  svm_model.pkl
results/: deep_learning_results.pkl  traditional_ml_results.pkl
src/: data_preprocessing.py  deep_learning.py  feature_extraction.py  traditional_ml.py
