[tool.poetry]
name = "ecg-arrhythmia-detection"
version = "0.1.0"
description = "ECG Arrhythmia Detection using ML and Deep Learning"
authors = ["Sri Durga Abhiram <dabhiram13@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.0"
pandas = "^2.0.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
scipy = "^1.10.0"
scikit-learn = "^1.3.0"
torch = {url = "https://download.pytorch.org/whl/cpu/torch-2.0.0%2Bcpu-cp311-cp311-linux_x86_64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cpu/torchvision-0.15.0%2Bcpu-cp311-cp311-linux_x86_64.whl"}
wfdb = "^4.1.0"
tqdm = "^4.65.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"